# downloads-cleaner

./: .gitignore  README.md  pyproject.toml  review_demo.py
scripts/: demo_presenter_fixture_collapsible.py  demo_presenter_fixture_flat.py  generate_test_fixtures.py
src/downloads_cleaner/: categorizer.py  category.py  cli.py  presenter.py  presenter_review.py  recommendation_engine.py  review_demo.py  scanner.py
src/downloads_cleaner/actions/: models.py  planner.py
tests/: conftest.py  test_categorizer.py  test_presenter.py  test_presenter_review.py  test_recommendation_engine.py  test_scanner.py
