[project]
name = "downloads_cleaner"
version = "0.1.0"
description = "Downloads Cleaner CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
    "send2trash>=2.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
[project.scripts]
downloads-cleaner = "downloads_cleaner.review_demo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
